--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -156,8 +156,7 @@
       <%end%>
 
       <%# 商品がない場合のダミー %>
-      <%# 商品がある場合は表示されないようにしましょう %>
-      <%if @items == nil%>
+      <%if @items.count == 0%>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -176,7 +175,6 @@
         <% end %>
       </li>
       <%end%>
-      <%# //商品がある場合は表示されないようにしましょう %>
       <%# /商品がない場合のダミー %>
     </ul>
   </div>
